初步完成配置文件编辑，后面就是可视化编辑
