# server/docs/swagger.yaml
@@ -1,53 +1,5 @@
 basePath: /api
 definitions:
-  models.ServerConfigFileInfo:
-    properties:
-      exists:
-        description: 文件是否存在
-        type: boolean
-      file_name:
-        description: 文件名
-        type: string
-      file_path:
-        description: 文件完整路径
-        type: string
-      file_size:
-        description: 文件大小（字节）
-        type: integer
-      last_modified:
-        description: 最后修改时间
-        type: string
-    type: object
-  models.ServerConfigRequest:
-    properties:
-      game_ini:
-        description: Game.ini 文件内容
-        type: string
-      game_user_settings:
-        description: GameUserSettings.ini 文件内容
-        type: string
-    type: object
-  models.ServerConfigResponse:
-    properties:
-      game_ini:
-        description: Game.ini 文件内容
-        type: string
-      game_ini_path:
-        description: Game.ini 文件路径
-        type: string
-      game_user_settings:
-        description: GameUserSettings.ini 文件内容
-        type: string
-      game_user_settings_path:
-        description: GameUserSettings.ini 文件路径
-        type: string
-      server_id:
-        type: integer
-      server_name:
-        type: string
-      updated_at:
-        type: string
-    type: object
   models.ServerRequest:
     properties:
       admin_password:
@@ -90,6 +42,12 @@ definitions:
         type: string
       description:
         type: string
+      game_ini:
+        description: Game.ini 文件内容
+        type: string
+      game_user_settings:
+        description: 配置文件内容
+        type: string
       id:
         type: integer
       map:
@@ -116,6 +74,12 @@ definitions:
       admin_password:
         type: string
       description:
+        type: string
+      game_ini:
+        description: Game.ini 文件内容
+        type: string
+      game_user_settings:
+        description: 配置文件内容（可选）
         type: string
       map:
         type: string
@@ -415,7 +379,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: 根据ID获取指定服务器的详细信息
+      description: 根据ID获取指定服务器的详细信息（包括配置文件内容）
       parameters:
       - description: 服务器ID
         in: path
@@ -426,7 +390,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: 服务器信息
+          description: 服务器信息（包含配置文件）
           schema:
             additionalProperties:
               $ref: '#/definitions/models.ServerResponse'
@@ -457,14 +421,14 @@ paths:
     put:
       consumes:
       - application/json
-      description: 更新指定服务器的配置信息
+      description: 更新指定服务器的配置信息（包括配置文件）
       parameters:
       - description: 服务器ID
         in: path
         name: id
         required: true
         type: integer
-      - description: 更新的服务器配置
+      - description: 更新的服务器配置（可包含配置文件内容）
         in: body
         name: server
         required: true
@@ -506,148 +470,6 @@ paths:
       security:
       - Bearer: []
       summary: 更新服务器配置
-      tags:
-      - 服务器管理
-  /servers/{id}/config:
-    get:
-      consumes:
-      - application/json
-      description: 获取指定服务器的INI配置文件内容（GameUserSettings.ini和Game.ini）
-      parameters:
-      - description: 服务器ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 配置文件内容
-          schema:
-            additionalProperties:
-              $ref: '#/definitions/models.ServerConfigResponse'
-            type: object
-        "400":
-          description: 请求错误
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "401":
-          description: 未授权
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: 服务器不存在
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - Bearer: []
-      summary: 获取服务器配置文件
-      tags:
-      - 服务器管理
-    put:
-      consumes:
-      - application/json
-      description: 更新指定服务器的INI配置文件内容（GameUserSettings.ini和Game.ini）
-      parameters:
-      - description: 服务器ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: 配置文件内容
-        in: body
-        name: config
-        required: true
-        schema:
-          $ref: '#/definitions/models.ServerConfigRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 更新成功
-          schema:
-            additionalProperties:
-              $ref: '#/definitions/models.ServerConfigResponse'
-            type: object
-        "400":
-          description: 请求错误
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "401":
-          description: 未授权
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: 服务器不存在
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: 服务器错误
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - Bearer: []
-      summary: 更新服务器配置文件
-      tags:
-      - 服务器管理
-  /servers/{id}/config/files:
-    get:
-      consumes:
-      - application/json
-      description: 列出指定服务器配置目录下的所有INI文件
-      parameters:
-      - description: 服务器ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 配置文件列表
-          schema:
-            additionalProperties:
-              items:
-                $ref: '#/definitions/models.ServerConfigFileInfo'
-              type: array
-            type: object
-        "400":
-          description: 请求错误
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "401":
-          description: 未授权
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: 服务器不存在
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - Bearer: []
-      summary: 列出服务器配置文件
       tags:
       - 服务器管理
   /servers/{id}/folder:
