# server/routes/routes.go
@@ -36,10 +36,7 @@ func RegisterRoutes(r *gin.Engine) {
 			protected.GET("/servers/:id", controllers.GetServer)
 			protected.GET("/servers/:id/rcon", controllers.GetServerRCON)
 			protected.GET("/servers/:id/folder", controllers.GetServerFolderInfo)
-			protected.GET("/servers/:id/config", controllers.GetServerConfig)
-			protected.GET("/servers/:id/config/files", controllers.ListServerConfigFiles)
 			protected.PUT("/servers/:id", controllers.UpdateServer)
-			protected.PUT("/servers/:id/config", controllers.UpdateServerConfig)
 			protected.DELETE("/servers/:id", controllers.DeleteServer)
 			protected.POST("/servers/:id/start", controllers.StartServer)
 			protected.POST("/servers/:id/stop", controllers.StopServer)
